<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of ZAX.

    ZAX is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    ZAX is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with ZAX.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>

    <string name="app_name">ZAX</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="manage_servers">Manage servers</string>
    
    <string name="activity_events">Events</string>
    <string name="activity_problems">Problems</string>
    <string name="activity_checks">Checks</string>
    <string name="activity_screens">Screens</string>
    <string name="activity_preferences">Preferences</string>
    <string name="activity_servers">Servers</string>
    
    <string name="exc_http_auth_required">HTTP authorization required.</string>
    <string name="exc_no_api_access">No API access.</string>
    <string name="exc_precondition_failed">This version of Zabbix does not support API calls.</string>
    <string name="exc_login_incorrect">Zabbix login incorrect.</string>
    <string name="exc_no_connection">Could not connect to Zabbix server. Please verify internet access.</string>
    <string name="exc_connection_timeout">Connection to Zabbix server timed out. Please verify internet access.</string>
	<string name="exc_not_found">The Zabbix server could not be contacted. Please verify that the server address is correct.</string>
	<string name="exc_no_response">The Zabbix server did not respond. Please verify that the server address is correct.</string>    
    <string name="exc_account_blocked">Your account is blocked because of too many failed login attempts. Please unblock your account by using the web login on your Zabbix server.</string>
    <string name="exc_internal_error">Internal error.</string>
    <string name="exc_https_certificate_not_trusted">The SSL certificate of the configured server could not be verified.</string>
    
    <string name="no_items_to_display">No items to display.</string>
    <string name="trigger_details">Trigger Details</string>
    <string name="host">Host</string>
    <string name="event">Event</string>
    <string name="trigger">Trigger</string>
    <string name="item">Item</string>
    <string name="severity">Severity</string>
    <string name="title">Title</string>
    <string name="expression">Expression</string>
    <string name="disabled">Disabled</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="acknowledged">Acknowledged</string>
    <string name="preferences">Preferences</string>
    <string name="refresh_all_data">Refresh all data</string>
    <string name="severity_all">all</string>
    <string name="severity_not_classified">not classified</string>
    <string name="severity_information">information</string>
    <string name="severity_warning">warning</string>
    <string name="severity_average">average</string>
    <string name="severity_high">high</string>
    <string name="severity_disaster">disaster</string>
    <string name="zabbix_login_successful">Zabbix login was successful.</string>
    <string name="server_data_not_set">Zabbix server data not set</string>
    <string name="fill_in_server_data">Please fill in your Zabbix server data before using the app.</string>
    <string name="ok">OK</string>
    <string name="hostgroup_all">all hostgroups</string>
    <string name="item_details">Item Details</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="problem">Problem</string>
    <string name="loading">Loading</string>
    <string name="zabbix_login">Zabbix Login</string>
    <string name="zabbix_login_in_progress">Logging in to Zabbix. Please wait.</string>
    <string name="push_notifications">Pubnub Push Notifications</string>
    <string name="push_connection_error">Error connecting to Pubnub</string>
    <string name="push_connection_success">Successfully connected to Pubnub</string>
    <string name="enabled">Enabled</string>
    <string name="old_notification_icons">Alternative notification icons</string>
    <string name="old_notification_icons_desc">red cross / green check in status bar</string>
    <string name="other">other</string>
    <string name="no_history_data_found">No history data found for this item.</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="url_example">http://zabbix.company.net/zabbix</string>
    <string name="url_description">including path, e.g. http://zbx.company.com/zabbix</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="http_auth">HTTP Authentication</string>
    <string name="subscribe_key">Pubnub Subscribe Key</string>
    <string name="event_details">Event Details</string>
    <string name="latest_data">Latest data</string>
    <string name="at">at</string>
    <string name="ringtone">Ringtone for Problem-Messages</string>
    <string name="acknowledge_event">Acknowledge Event</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="trust_all_ssl_certificates">Trust all SSL Certificates</string>
    <string name="trust_all_ssl_certificates_description">Enable this option if you are using SSL and your server\'s certificate is not issued by a certificate authority trusted by your device. Attention: This basically disables SSL. Check only if you know what you are doing!</string>
    <string name="homescreen_widget">Homescreen Widget</string>
    <string name="theme">Theme</string>
    <string name="theme_dark">Use dark theme</string>
    <string name="theme_dark_desc">Choose the dark theme to improve battery usage (due to reduced brightness) when using the app.</string>
    
    <string name="empty_list_checks">No items found for this application.</string>
    <string name="empty_list_events">No events found for this severity.</string>
    <string name="empty_list_problems">No problems found for this severity.</string>
     
    <string name="notification_title">Zabbix triggers</string>
    
    <string name="widget_label_1x1">ZAX 1x1</string>
    <string name="widget_label_list">ZAX Problems List</string>
    <string name="widget_headline">Problems</string>
    <string name="widget_refresh">refresh widget</string>
    <string name="widget_no_problems">There are no problems at the moment</string>
    <string name="widget_more_problem">and %1$d more problem</string>
    <string name="widget_more_problems">and %1$d more problems</string>
    <string name="widget_problems">%1$d &gt;=high\n%2$d &lt;=avg"</string>
    <string name="widget_loading">loading...</string>
    <string name="widget_connection_error">connection error</string>
    <string name="widget_connection_error_long">connection error - Please check your internet connection and your server settings.</string>

    <string name="add_server">Add Server</string>

    <string name="remove">Remove</string>

    <string name="change_name">Change Name</string>
    
    <string name="android_version_too_old_for_parallel">Your Android version is too old for using multiple zabbix servers on homescreen widgets.</string>
    <string name="info">Info</string>
    <string name="serverpreferences_url_validation_invalid_url">The entered URL is not valid and was not saved. (Did you use backslashes instead of slashes?)</string>
    <string name="open_server_selection_list">open server selection list</string>
    <string name="gcm_sender_id">GCM Sender ID</string>
    <string name="gcm_push_notifications">GCM Push Notifications</string>
    <string name="gcm_push_server">GCM Push Server</string>
    <string name="push_dialog_info">To use Push Notifications, you have to configure your Zabbix server. Please read the Howto at http://inovex.github.io/zax/#howto_push</string>
    <string name="settings_incomplete">Some settings are missing. Push-Notifications might not work.</string>
    <string name="ringtone_ok">Ringtone for OK-Messages</string>
</resources>
