<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.inovex.zabbixmobile.activities.BaseActivity">

    <group android:id="@+id/grp0_server"/>

    <group android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_problems"
            android:icon="@drawable/problem"
            android:title="@string/activity_problems"/>
        <item
            android:id="@+id/navigation_item_events"
            android:icon="@drawable/ic_format_list_bulleted_grey600_24dp"
            android:title="@string/activity_events"/>

        <item
            android:id="@+id/navigation_item_checks"
            android:icon="@drawable/ok"
            android:title="@string/activity_checks"/>

        <item
            android:id="@+id/navigation_item_screens"
            android:icon="@drawable/ic_monitor_multiple_grey600_24dp"
            android:title="@string/activity_screens"/>
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/navigation_manage_servers"
            android:icon="@drawable/ic_server_grey600_24dp"
            android:title="@string/manage_servers"/>
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings_grey600_24dp"
            android:title="@string/preferences" />
        <item
            android:id="@+id/navigation_info"
            android:icon="@drawable/ic_information_outline_grey600_24dp"
            android:title="@string/info" />
    </group>

</menu>