<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of ZAX.

    ZAX is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    ZAX is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with ZAX.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="Push Notifications">
        <RingtonePreference
            android:key="push_ringtone"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/ringtone" >
        </RingtonePreference>

        <RingtonePreference
            android:key="push_ok_ringtone"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/ringtone_ok" >
        </RingtonePreference>

        <CheckBoxPreference
            android:key="push_old_icons"
            android:summary="@string/old_notification_icons_desc"
            android:title="@string/old_notification_icons"
            android:defaultValue="true">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="vibrate"
            android:summary="@string/vibrate_desc"
            android:title="@string/vibrate"
            android:defaultValue="true">
        </CheckBoxPreference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/push_notifications" >
        <CheckBoxPreference
            android:key="pubnub_push_enabled"
            android:title="@string/enabled" >
        </CheckBoxPreference>

        <EditTextPreference
            android:key="pubnub_push_subscribe_key"
            android:title="@string/subscribe_key">
        </EditTextPreference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/gcm_push_notifications">
        <CheckBoxPreference
            android:key="gcm_push_enabled"
            android:title="Enabled"/>
        <EditTextPreference
            android:key="gcm_sender_id"
            android:title="@string/gcm_sender_id"/>
        <EditTextPreference
            android:key="gcm_server_url"
            android:title="@string/gcm_push_server"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/homescreen_widget" >
        <EditTextPreference
            android:defaultValue="15"
            android:inputType="number"
            android:key="widget_refresh_interval_mins"
            android:summary="Set this to 0 to disable automatic refresh"
            android:title="Refresh interval (min)" />
    </PreferenceCategory>
    <!-- Option is disabled as long as AppThemeDark is empty, -->
    <!-- but code that switches themes is still active -->
    <!--<PreferenceCategory android:title="@string/theme" >-->
        <!--<CheckBoxPreference-->
            <!--android:key="dark_theme"-->
            <!--android:summary="@string/theme_dark_desc"-->
            <!--android:title="@string/theme_dark" />-->
    <!--</PreferenceCategory>-->
    
</PreferenceScreen>