<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of ZAX.

    ZAX is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    ZAX is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with ZAX.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details_trigger_container"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/inc_padding_top" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trigger_details"
        android:textStyle="bold" >
    </TextView>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="@dimen/table_row_width"
                android:layout_height="wrap_content"
                android:text="@string/host" >
            </TextView>

            <TextView
                android:id="@+id/trigger_details_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trigger" >
            </TextView>

            <TextView
                android:id="@+id/trigger_details_trigger"
                android:layout_width="190dip"
                android:layout_height="wrap_content"
                android:maxLines="4" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/severity" >
            </TextView>

            <TextView
                android:id="@+id/trigger_details_severity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expression" >
            </TextView>

            <TextView
                android:id="@+id/trigger_details_expression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item" >
            </TextView>

            <TextView
                android:id="@+id/trigger_details_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>
        </TableRow>
    </TableLayout>

</LinearLayout>