<!--
This file is part of ZAX.

    ZAX is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    ZAX is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with ZAX.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/inc_padding_top" >

        <TextView
            android:id="@+id/event_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_details"
            android:textStyle="bold" >
        </TextView>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="@dimen/table_row_width"
                    android:layout_height="wrap_content"
                    android:text="@string/time" >
                </TextView>

                <TextView
                    android:id="@+id/event_details_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status" >
                </TextView>

                <TextView
                    android:id="@+id/event_details_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/problem"
                    android:drawablePadding="@dimen/drawable_status_padding" >
                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acknowledged" >
                </TextView>

                <TextView
                    android:id="@+id/event_details_acknowledged"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/problem"
                    android:drawablePadding="@dimen/drawable_status_padding" >
                </TextView>
            </TableRow>
        </TableLayout>

        <include layout="@layout/inc_details_trigger" />

        <include layout="@layout/inc_latest_data" />

        <include layout="@layout/inc_graph_view" />
    </LinearLayout>

</ScrollView>